fix: dark mode and mobile

--- a/src/components/JarSelectorModal.module.css
+++ b/src/components/JarSelectorModal.module.css
@@ -56,7 +56,8 @@
 
 .jarsContainer {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 2rem;
@@ -65,7 +66,6 @@
 
 @media only screen and (min-width: 768px) {
   .jarsContainer {
-    flex-direction: row;
     gap: 1.5rem;
   }
 }
